removed unused dependencies, added error handling

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,19 @@
-include *.py
-recursive-include cli *
-recursive-include core *
-recursive-include dashboard *
-recursive-include dashboard/resources *.png
-recursive-include graphics *
-recursive-include io *
+include README.md
+include LICENSE
+include requirements*.txt
+include pyproject.toml
+include DEPENDENCY_MANAGEMENT.md
+include MIGRATION_GUIDE.md
+
+# Include all Python files
+recursive-include oipd *.py
+
+# Include test files
+recursive-include tests *.py
+recursive-include tests/io/resources *.csv
+
+# Exclude compiled files
+global-exclude *.pyc
+global-exclude __pycache__
+global-exclude *.pyo
+global-exclude .DS_Store
