--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,11 @@ env.bak/
 venv.bak/
 .new_venv
 
+# AI folders
+.kiro/
+.claude
+.claude/
+
 # Spyder project settings
 .spyderproject
 .spyproject
