added black76 as a pricing engine

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "kiroAgent.configureMCP": "Disabled",
-    "claudeCodeChat.permissions.yoloMode": true
+    "claudeCodeChat.permissions.yoloMode": true,
+    "chatgpt.openOnStartup": true
 }
