--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,6 @@ README_ARCHIVE.md
 example_new.py
 exampleOil.py
 examples/animation.ipynb
+examples/OIPDwalkthrough.gif
+examples/OIPDwalkthrough.mp4
+examples/readme_image.py
