--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
   { name="Henry Tian", email="tyrneh@gmail.com" },
   { name="Jannic Holzer", email="jannic.holzer@gmail.com" },
 ]
-license = {text = "MIT"}
+license = {text = "Apache License 2.0"}
 description = "Generate probability distributions on the future price of publicly traded securities using options data"
 requires-python = ">=3.10"
 classifiers = [
