--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "oipd"
-version = "1.0.2"
+version = "1.0.3"
 readme = "README.md"
 authors = [
   { name="Henry Tian", email="tyrneh@gmail.com" },
@@ -38,6 +38,7 @@ dependencies = [
     "matplotlib-label-lines>=0.6.0",
     "traitlets>=5.12.0",
     "yfinance>=0.2.60",
+    "pybit>=5.8.0",
 ]
 
 [project.optional-dependencies]
@@ -49,6 +50,17 @@ minimal = [
     "matplotlib>=3.8.0",
     "matplotlib-label-lines>=0.6.0",
     "traitlets>=5.12.0",
+]
+
+# Crypto-only installation - for cryptocurrency options data
+crypto = [
+    "numpy>=1.26.0",
+    "pandas>=2.1.0",
+    "scipy>=1.11.0",
+    "matplotlib>=3.8.0",
+    "matplotlib-label-lines>=0.6.0",
+    "traitlets>=5.12.0",
+    "pybit>=5.8.0",
 ]
 
 # Developer tools (formatting, linting, testing, build)
