--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 # Core dependencies for OIPD
+black==25.9.0
+flake8==7.3.0
 numpy>=1.26,<2
 pandas>=2.1,<3
 scipy>=1.11,<2
 matplotlib>=3.8,<4
 matplotlib-label-lines>=0.6,<1
+pytest==8.4.2
 traitlets>=5.12,<6
