--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
   { name="Jannic Holzer", email="jannic.holzer@gmail.com" },
   { name="Chun Hei Hung", email="chunhei1848@gmail.com" },
   { name="Melanie Chen", email="melaniechen28@gmail.com" },
+  { name="Jaewon La", email="jaewonla0225@gmail.com" },
 ]
 license = {text = "Apache License 2.0"}
 description = "Generate probability distributions on the future price of publicly traded securities using options data"
