--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "oipd"
-version = "1.0.3dev1"
+version = "1.0.4dev1"
 readme = "README.md"
 authors = [
   { name="Henry Tian", email="tyrneh@gmail.com" },
   { name="Jannic Holzer", email="jannic.holzer@gmail.com" },
   { name="Chun Hei Hung", email="chunhei1848@gmail.com" },
-  { name="Melanie Chen", email="melaniechen28@gmail.com" },
   { name="Jaewon La", email="jaewonla0225@gmail.com" },
 ]
 license = {text = "Apache License 2.0"}
@@ -37,6 +36,7 @@ dependencies = [
     "scipy>=1.11.0",
     "matplotlib>=3.8.0",
     "matplotlib-label-lines>=0.6.0",
+    "plotly>=5,<6",
     "traitlets>=5.12.0",
     "yfinance>=0.2.60",
 ]
@@ -49,6 +49,7 @@ minimal = [
     "scipy>=1.11.0",
     "matplotlib>=3.8.0",
     "matplotlib-label-lines>=0.6.0",
+    "plotly>=5,<6",
     "traitlets>=5.12.0",
 ]
 
