--- a/.gitignore
+++ b/.gitignore
@@ -119,16 +119,14 @@ venv.bak/
 .new_venv
 
 # AI folders
-.kiro/
 CLAUDE.md
 .claude/
-.reviews/
-.reviews/*
 PRDs/*
 PRDs/
 .codex/
 .codex/*
 AGENTS.md
+.agent/
 
 # Spyder project settings
 .spyderproject
