updated tutorial jupyter notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ examples/animation.ipynb
 examples/OIPDwalkthrough.gif
 examples/OIPDwalkthrough.mp4
 examples/readme_image.py
+examples/archive/
