Update workflow and data assets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt -c constraints.txt
 
       - name: Run formatter
         run: black --check .
@@ -49,7 +49,61 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt -c constraints.txt
+
+      - name: Report SVI calibration (Linux)
+        run: |
+          PYTHONPATH=. python - <<'PY'
+          import pandas as pd
+          import numpy as np
+          import scipy
+          from oipd import VolCurve, MarketInputs
+
+          print("numpy", np.__version__)
+          print("scipy", scipy.__version__)
+          print("pandas", pd.__version__)
+
+          df = pd.read_csv("tests/data/AAPL_data.csv")
+          df = df[df["expiration"] == "2026-01-16"]
+
+          market = MarketInputs(
+              valuation_date=pd.Timestamp("2025-01-15"),
+              risk_free_rate=0.045,
+              underlying_price=220.0,
+          )
+
+          column_mapping = {
+              "strike": "strike",
+              "last_price": "last_price",
+              "type": "option_type",
+              "bid": "bid",
+              "ask": "ask",
+              "expiration": "expiry",
+          }
+
+          vc = VolCurve(method="svi")
+          vc.method_options = {"random_seed": 42}
+          vc.fit(df, market, column_mapping=column_mapping)
+
+          params = vc.params
+          print(
+              "SVI params",
+              {k: params.get(k) for k in ("a", "b", "rho", "m", "sigma", "forward", "maturity_years")},
+          )
+
+          diagnostics = getattr(vc, "diagnostics", None)
+          if diagnostics is not None:
+              print(
+                  "SVI diagnostics",
+                  {
+                      "objective": getattr(diagnostics, "objective", None),
+                      "rmse_weighted": getattr(diagnostics, "rmse_weighted", None),
+                      "rmse_unweighted": getattr(diagnostics, "rmse_unweighted", None),
+                      "envelope_violations_pct": getattr(diagnostics, "envelope_violations_pct", None),
+                      "chosen_start_origin": getattr(diagnostics, "chosen_start_origin", None),
+                  },
+              )
+          PY
 
       - name: Run tests
         run: pytest
