--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,28 +81,43 @@ jobs:
               "expiration": "expiry",
           }
 
-          vc = VolCurve(method="svi")
-          vc.method_options = {"random_seed": 42}
-          vc.fit(df, market, column_mapping=column_mapping)
-
-          params = vc.params
-          print(
-              "SVI params",
-              {k: params.get(k) for k in ("a", "b", "rho", "m", "sigma", "forward", "maturity_years")},
-          )
-
-          diagnostics = getattr(vc, "diagnostics", None)
-          if diagnostics is not None:
-              print(
-                  "SVI diagnostics",
-                  {
+          def run_fit():
+              vc = VolCurve(method="svi")
+              vc.method_options = {"random_seed": 42}
+              vc.fit(df, market, column_mapping=column_mapping)
+              params = {k: vc.params.get(k) for k in ("a", "b", "rho", "m", "sigma", "forward", "maturity_years")}
+              diagnostics = getattr(vc, "diagnostics", None)
+              diag = None
+              if diagnostics is not None:
+                  diag = {
                       "objective": getattr(diagnostics, "objective", None),
                       "rmse_weighted": getattr(diagnostics, "rmse_weighted", None),
                       "rmse_unweighted": getattr(diagnostics, "rmse_unweighted", None),
                       "envelope_violations_pct": getattr(diagnostics, "envelope_violations_pct", None),
                       "chosen_start_origin": getattr(diagnostics, "chosen_start_origin", None),
-                  },
-              )
+                  }
+              return params, diag
+
+          params_1, diag_1 = run_fit()
+          params_2, diag_2 = run_fit()
+
+          print("SVI params run1", params_1)
+          print("SVI params run2", params_2)
+
+          if diag_1 is not None:
+              print("SVI diagnostics run1", diag_1)
+          if diag_2 is not None:
+              print("SVI diagnostics run2", diag_2)
+
+          diffs = {k: None for k in params_1.keys()}
+          for k in params_1.keys():
+              v1 = params_1.get(k)
+              v2 = params_2.get(k)
+              try:
+                  diffs[k] = float(abs(v1 - v2))
+              except Exception:
+                  diffs[k] = None
+          print("SVI param abs diff", diffs)
           PY
 
       - name: Run tests
