--- a/.gitignore
+++ b/.gitignore
@@ -92,14 +92,7 @@ ipython_config.py
 # pyenv
 .python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+# PEP 582; 
 __pypackages__/
 
 # Celery stuff
@@ -163,3 +156,5 @@ examples/OIPDwalkthrough.mp4
 examples/readme_image.py
 examples/archive/
 .archive/
+experiments/
+experiments/*
